<resources>
    <string name="app_name">MAD_asgn</string>
    <string name="scheduled_commutes">Scheduled Commutes</string>
    <string name="no_scheduled_rides">No Scheduled Rides</string>
    <string name="new_schedule">New Schedule</string>
    <string name="schedule_history">Schedule History</string>
    <string name="distance">Distance:</string>
    <string name="from">From</string>
    <string name="to">To</string>
</resources>